Fix Security/Reliability issues: resource leaks, encoding, and URLDecoder deprecation
Co-authored-by: shijl0925 <3942793+shijl0925@users.noreply.github.com>